--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   uuid: ^4.0.1
   google_mlkit_commons: ^0.11.0
   google_mlkit_text_recognition: ^0.15.0
+  http: ^1.2.1 # <-- ADD THIS LINE FOR HTTP REQUESTS
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -102,3 +103,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
